--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,13 @@ services:
     networks:
       - svc-net
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0.13
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: P@ssw0rd
-      MYSQL_USER: svcuser
-      MYSQL_PASSWORD: svcuserpassword
-      MYSQL_DATABASE: database
+      MYSQL_ROOT_PASSWORD: qwerty
     volumes:
       - ./debug/mysql:/var/lib/mysql:rw
+      - ./src/db/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     command: "--innodb_use_native_aio=0"
     networks:
       - svc-net
